Fix problema etichetta admin + refactoring codice + modifica pom.xml per rendere l'app più veloce (c'era una versione di javafx vecchia che rallentava il tutto)